2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc.tcl: Fixed expr'essions without braces.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-01-24  Andreas Kupries  <andreask@activestate.com>

	* irc.man: Small documentation cleanups.

2004-01-20 Aaron Faupell <afaupell@users.sourceforge.net>

	* irc.tcl Fixed incorrect usage of linsert in previous change.
	Removed uneeded state variable.

2003-10-22  David N. Welton  <davidw@dedasys.com>

	* irc.tcl (network): Fixed usage of eval - thanks to Jeff Hobbs.

2003-07-27 Aaron Faupell <afaupell@users.sourceforge.net>
	* irc.tcl removed catch around socket creation

2003-07-02 Aaron Faupell <afaupell@users.sourceforge.net>
	* irc.tcl fixed logger not being turned off if debug
	was turned off prior to creating new connection.

2003-07-02 Aaron Faupell
	* irc.tcl moved cmd-reload to ::irc::reload. removed
	unused nick variable.
	* irc.man added all the recently created
	commands to the man page.


2003-06-30  David N. Welton  <davidw@dedasys.com>

	* irc.tcl (::irc::connection): connection no longer takes
	host/port arguments.  This is done by connect now.  Added note
	that compatibility code for older versions should be removed after
	a release cycle or two.  (Aaron Faupell)
	(cmd-connect): connect command now takes hostname and port
	arguments. (Aaron Faupell)
	(cmd-reload): New command reloads irc.tcl file, making it possible
	to make changes in a running system without losing the connection.
	(::irc::connection): The unique namespace for irc connections no
	longer includes the hostname. (Aaron Faupell)
	(::irc::connections): New command - return list of existing
	connections (Aaron Faupell).
	(cmd-config): Per connection configuration (Aaron Faupell).